CHATS_SIT/force-app/main/default/objects/sfsit_t_emplmt_pay_stub_hist__x.object
<CustomObject>
    <description>sfsit$t_emplmt_pay_stub_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_emplmt_pay_stub_hist</externalName>
    <fields>
        <fullName>amt_income_gross__c</fullName>
        <description>amt_income_gross</description>
        <externalDeveloperName>amt_income_gross</externalDeveloperName>
        <label>Gross Amount before taxes and deductions</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_tips_avg__c</fullName>
        <description>amt_tips_avg</description>
        <externalDeveloperName>amt_tips_avg</externalDeveloperName>
        <label>Tips/Commisions/Bonuses</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cde_freq_pay__c</fullName>
        <description>cde_freq_pay</description>
        <externalDeveloperName>cde_freq_pay</externalDeveloperName>
        <label>Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_source_vrfyd_pay__c</fullName>
        <description>cde_source_vrfyd_pay</description>
        <externalDeveloperName>cde_source_vrfyd_pay</externalDeveloperName>
        <label>Source Verification Pay Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_emplmt__c</fullName>
        <description>cde_type_emplmt</description>
        <externalDeveloperName>cde_type_emplmt</externalDeveloperName>
        <label>Employment Type Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_verif__c</fullName>
        <description>cde_type_verif</description>
        <externalDeveloperName>cde_type_verif</externalDeveloperName>
        <label>Verification Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnt_worked_hours_stub_pay__c</fullName>
        <description>cnt_worked_hours_stub_pay</description>
        <externalDeveloperName>cnt_worked_hours_stub_pay</externalDeveloperName>
        <label>Hours Worked and Care Needed</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_pay__c</fullName>
        <description>dte_pay</description>
        <externalDeveloperName>dte_pay</externalDeveloperName>
        <label>Pay Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_verif__c</fullName>
        <description>dte_verif</description>
        <externalDeveloperName>dte_verif</externalDeveloperName>
        <label>Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_case_vrfyng__c</fullName>
        <description>idn_case_vrfyng</description>
        <externalDeveloperName>idn_case_vrfyng</externalDeveloperName>
        <label>Case Verifying</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_client__c</fullName>
        <description>idn_client</description>
        <externalDeveloperName>idn_client</externalDeveloperName>
        <label>Client ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_emplmt_indiv__c</fullName>
        <description>idn_emplmt_indiv</description>
        <externalDeveloperName>idn_emplmt_indiv</externalDeveloperName>
        <label>Emplyment Individual ID</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_stub_pay__c</fullName>
        <description>idn_stub_pay</description>
        <externalDeveloperName>idn_stub_pay</externalDeveloperName>
        <label>Pay Stub ID</label>
        <length>50</length>
        <referenceTargetField>T_EMPLMT_PAY_STUB__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_EMPLMT_PAY_STUB__c</referenceTo>
        <relationshipLabel>Employment Pay Stub Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_emplmt_pay_stub_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_stub_pay_hist__c</fullName>
        <description>idn_stub_pay_hist</description>
        <externalDeveloperName>idn_stub_pay_hist</externalDeveloperName>
        <label>Pay Stub ID Hist</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_emplmt_pay_stub_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>idn_user_vrfyng__c</fullName>
        <description>idn_user_vrfyng</description>
        <externalDeveloperName>idn_user_vrfyng</externalDeveloperName>
        <label>User verifying</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_curr__c</fullName>
        <description>ind_record_curr</description>
        <externalDeveloperName>ind_record_curr</externalDeveloperName>
        <label>Current Record Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_emplmt_indiv__c</fullName>
        <description>nbr_seq_emplmt_indiv</description>
        <externalDeveloperName>nbr_seq_emplmt_indiv</externalDeveloperName>
        <label>Employment Individual Number Sequence</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_income_emplmt__c</fullName>
        <description>nbr_seq_income_emplmt</description>
        <externalDeveloperName>nbr_seq_income_emplmt</externalDeveloperName>
        <label>Income Employment Number Sequence</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Employment Pay Stub History</label>
    <pluralLabel>Employment Pay Stub History</pluralLabel>
</CustomObject>